# foxfire

./: Cargo.toml  LICENSE  README.md
octave/: extract_chirps.m  generate_dummy_data.m  read_session.m  run.m
octave/utilities/: compute_range_doppler_map.m  compute_range_matrix.m  read_raw_frame.m  timestamp_from_u128.m
radar_config/: readme.txt
radar_config/config_3rx_10m/: BGT60TR13C_export_registers_20241208-224133.txt  BGT60TR13C_settings_20241208-224127.json
radar_config/config_3rx_2m/: BGT60TR13C_export_registers_20241208-223718.txt  BGT60TR13C_settings_20241208-223658.json
radar_config/config_3rx_5m/: BGT60TR13C_export_registers_20241101-104319.txt  BGT60TR13C_settings_20241101-104314.json
radar_config/config_track/: BGT60TR13C_export_registers_20241109-215212.txt  BGT60TR13C_settings_20241109-215206.json
radar_config/fox_test/: settings.json
src/: bgt60tr13c_const.rs  config.rs  main.rs  radar_config.rs
src/device/: bgt60tr13c.rs  mod.rs
src/dsp/: cfar.rs  fft.rs  mod.rs  processor.rs
src/util/: mod.rs  raw_data_io.rs
