[package]
name = "foxfire"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "foxfire"
path = "src/main.rs"

[dependencies]
rppal = "0.22.1"
rustfft = "6.2.0"
serde_json = "1.0.143"
log = "0.4.21"
simple_logger = "5.0.0"
chrono = "0.4.38"
crossbeam-channel = "0.5.13"
ndarray = "0.16.1"
byteorder = "1.5.0"
num-complex = "0.4"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
approx = "0.5"